--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@
         </div>
         <div class="keys">
             <div class="buttons">
-            <button data-all-clear>AC</button>
-            <button data-operation>%</button>
-            <button data-clear>C</button>
-            <button data-operation>/</button>
+            <button data-all-clear class="operation">AC</button>
+            <button data-operation class="operation">%</button>
+            <button data-clear class="operation">C</button>
+            <button data-operation class="operation">/</button>
             <button data-number>7</button>
             <button data-number>8</button>
             <button data-number>9</button>
-            <button data-operation>x</button>
+            <button data-operation class="operation">x</button>
             <button data-number>4</button>
             <button data-number>5</button>
             <button data-number>6</button>
-            <button data-operation>-</button>
+            <button data-operation class="operation">-</button>
             <button data-number>1</button>
             <button data-number>2</button>
             <button data-number>3</button>
-            <button data-operation>+</button>
+            <button data-operation class="operation">+</button>
             <button data-number>.</button>
             <button data-number>0</button>
-            <button data-equals id="equals">=</button>
+            <button data-equals id="equals" class="operation">=</button>
             </div>
         </div>
 
